--- a/web/less/fantasy_team_comp.less
+++ b/web/less/fantasy_team_comp.less
@@ -398,6 +398,9 @@
 
 .opponent-team-gradient {
 	#gradient.vertical(@greyHeaderLight, @greyHeaderDark, 49%, 51%);
+	.user-nickname {
+		margin: 0 130px 0 80px;
+	}
 }
 
 .soccer-player-statistics {
